@@ -21,8 +21,8 @@ namespace Castle.MicroKernel.Handlers
 
 	public static class HandlerExtensionsUtil
 	{
-		public static string ReleaseExtensionsKey = "Castle.ReleaseExtensions";
-		public static string ResolveExtensionsKey = "Castle.ResolveExtensions";
+		public static readonly string ReleaseExtensionsKey = "Castle.ReleaseExtensions";
+		public static readonly string ResolveExtensionsKey = "Castle.ResolveExtensions";
 
 		public static ICollection<IReleaseExtension> ReleaseExtensions(this ComponentModel model, bool ensureExists)
 		{
