@@ -1,4 +1,5 @@
 - fixed IOC-354 - Deadlock in pooled lifestyle under heavy load
+- fixed IOC-300 - OnCreate does not work for generic components
 
 3.1.0 (2012-08-05)
 ==================
